[FEAT] #7 Hotfix solved
- Redirect URI!!!!!